--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <article class="container-fluid news px-4">
-        <div class="row mx-5">
+        <div class="row mx-sm-5 mx-4">
             <div class="lamp col-lg-7 col-md-6 p-0">
                 <img src="./image/lamp.jpg" class="w-100 h-100">
             </div>
@@ -60,7 +60,7 @@
     <main>
         <div class="container-fluid category">
             <h2 class="mb-md-5 mb-4">商品類別</h2>
-            <div class="row mx-mb-3 mx-5">
+            <div class="row mx-mb-3 mx-sm-5 mx-4">
                 <div class="col-md-4 col-12">
                     <div class="item each p-2">
                         <div class="imgBorder h-md-100 h-75">
