解決瀏覽器相容性問題

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav>
             <ul class="pages mobile">
                 <li><a class="body1" href="">精選傢俱</a></li>
-                <li><a href="">風格商城</a></li>
-                <li><a href="">品牌介紹</a></li>
-                <li><a href="">BLOG</a></li>
-                <li><a href="">門市資訊</a></li>
+                <li><a class="body1" href="">風格商城</a></li>
+                <li><a class="body1" href="">品牌介紹</a></li>
+                <li><a class="body1" href="">BLOG</a></li>
+                <li><a class="body1" href="">門市資訊</a></li>
             </ul>
         </nav>
         <ul class="icons">
